# RapidAIRuntime

./: CMakeLists.txt  README.md
RapidAIRuntime/include/: TRTCalibrator.h  TensorRTBackend.h  utility.h
RapidAIRuntime/src/: TensorRTBackend.cpp  utility.cpp
RapidAIRuntime/test/: CMakeLists.txt  test_converter.cpp
